[package]
name = "todo-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
dialoguer = "0.11"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"